FC_YAML/fastapi_D.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi
          image: jaobed/fastapi_projet:V.00
          ports:
            - containerPort: 8000
          command: ["uvicorn", "app.main:app", "--host", "0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      nodePort: 32001
  type: NodePort # Ou LoadBalancer en fonction de votre environnement
